--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express-ejs-layouts": "^2.5.0",
         "express-session": "^1.17.1",
         "mongoose": "^5.9.24",
+        "node-geocoder": "^3.27.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0"
     }
