--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.0",
         "express-session": "^1.17.1",
+        "moment": "^2.27.0",
         "mongoose": "^5.9.24",
         "multer": "^1.4.2",
         "node-geocoder": "^3.27.0",
