--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "start": "node index",
         "test": "nodemon app.js"
     },
     "keywords": [],
