--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "start": "node index",
+        "start": "node app",
         "test": "nodemon app.js"
     },
     "keywords": [],
