--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "moment": "^2.27.0",
         "mongoose": "^5.9.24",
         "multer": "^1.4.2",
+        "multer-sharp": "^0.6.2",
         "node-geocoder": "^3.27.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0"
